[package]
name = "my-embed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rp-pico = "0.6.0"
usbd-serial = "0.1.1"
usb-device = "0.2.9"
panic-halt = "0.2.0"
cortex-m-rt = "0.7.2"
cortex-m = "0.7.6"
embedded-hal = "0.2.7"
microbit = "0.13.0"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
heapless = "0.7.16"
critical-section = "1.1.1"
# usbd-dfu = "0.2.0"
# spin = "0.9.4"
# rp2040-hal = "0.6.1"
# fugit = "0.3.6"